packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__maths__tests__should_parse_bracketed_expression.snap
---
source: packages/moonjuice-parser/src/tests/maths.rs
expression: "$crate :: tokenise_and_parse(\"1 + (2 + 3)\".chars().collect())"
---
- value:
    Expression:
      BinaryOperator:
        op: Add
        lhs:
          value:
            Int: 1
          start:
            line: 1
            column: 1
          end:
            line: 1
            column: 2
        rhs:
          value:
            BinaryOperator:
              op: Add
              lhs:
                value:
                  Int: 2
                start:
                  line: 1
                  column: 6
                end:
                  line: 1
                  column: 7
              rhs:
                value:
                  Int: 3
                start:
                  line: 1
                  column: 10
                end:
                  line: 1
                  column: 11
          start:
            line: 1
            column: 8
          end:
            line: 1
            column: 9
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
