packages/moonjuice-parser/src/tests/snapshots/moonjuice_parser__tests__maths__tests__should_parse_precedence.snap
---
source: packages/moonjuice-parser/src/tests/maths.rs
expression: "$crate :: tokenise_and_parse(\"1 + 2 * 3\".chars().collect())"
---
- value:
    Expression:
      BinaryOperator:
        op: Add
        lhs:
          value:
            Int: 1
          start:
            line: 1
            column: 1
          end:
            line: 1
            column: 2
        rhs:
          value:
            BinaryOperator:
              op: Multiply
              lhs:
                value:
                  Int: 2
                start:
                  line: 1
                  column: 5
                end:
                  line: 1
                  column: 6
              rhs:
                value:
                  Int: 3
                start:
                  line: 1
                  column: 9
                end:
                  line: 1
                  column: 10
          start:
            line: 1
            column: 7
          end:
            line: 1
            column: 8
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
